--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=AX02Ii2j6EsSM2oseNGGnM_THb0JQgYPdOPNXu0Z57DbgCIZee27HqIeVZ04I5wYFT5VY7ATsrwvrHSE"></script>
 </head>
 
 <body>
