--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,11 @@
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
+  <script type="text/javascript" src="https://app.sandbox.midtrans.com/snap/snap.js"
+    data-client-key="SB-Mid-client-ojEypI047x7sFX1T"></script>
+  <!-- Note: replace with src="https://app.midtrans.com/snap/snap.js" for Production environment -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script><!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -29,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Ecommerce App</title>
   <script
     src="https://www.paypal.com/sdk/js?client-id=AX02Ii2j6EsSM2oseNGGnM_THb0JQgYPdOPNXu0Z57DbgCIZee27HqIeVZ04I5wYFT5VY7ATsrwvrHSE"></script>
 </head>
